# Info_Retrieval_Docker

./: .gitignore  docker-compose.yml
LSH/: Dockerfile  README.md  pyproject.toml
LSH/src/deduplication/: LSH.py  LSHForest.py  LSHImproved.py  __init__.py  __main__.py  ann.py  bloom_filter.py  dedup.py  load.py  test.py
LSH/src/utils/: use_cases.py  visualization_lsh.py  visualizations.py
LSH/tests/: test_deduplication.py
app/: Dockerfile  app.py
app/static/css/: styles.css
app/templates/: index.html  results.html
app/utils/: utils.py
app2/: app.py  requirements.txt  test.py
app2/static/css/: styles.css
app2/templates/: index.html
data/: Dockerfile  load_data.py
